# automerge-ssm

./: .gitignore  .gitmodules  AGENTS.md  AUTOSURGEON_MIGRATION.md  COMMIT_MESSAGE.txt  DEMO.md  EXECUTION_REQUEST_DESIGN.md  HANDOFF.md  NOTEBOOK_IMPLEMENTATION.md  NOTEBOOK_RUNTIMED.md  QUICK_START.md  README.md  RUST_CLIENT.md  SAMOD_INTEGRATION.md  SUMMARY.md  TRANSITION_SUMMARY.md  conductor-setup.sh  conductor.json  rust-client.sh  start-demo.sh
cli/: Cargo.toml
cli/outputs/: output-1762973434252-0.json  output-1762973452111-2.json
cli/src/: kernel.rs  lib.rs  main.rs  tui.rs  tui.rs.backup
docs/: counter-benefits.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  ErrorBoundary.tsx  index.css  main.tsx
frontend/src/components/: AutomergeCodeMirror.tsx  NotebookCell.tsx  Output.tsx  cursorPlugin.ts
server/: Cargo.toml
server/examples/: simple_client.rs
server/src/: main.rs
