[package]
name = "automerge-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge = "0.7"
autosurgeon = "0.9"
samod = { version = "0.5", features = ["tokio", "tungstenite"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
futures = "0.3"
bytes = "1.8"
anyhow = "1.0"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

[[bin]]
name = "automerge-cli"
path = "src/bin/repo_client.rs"
