[package]
name = "automerge-server"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge = "0.7"
samod = { version = "0.5", features = ["tokio", "tungstenite"] }
tokio = { version = "1", features = ["full"] }

futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
url = "2.5"
